modified:   SRS_reward_function/CMakeLists.txt 	deleted:    SRS_reward_function/Makefile.ros 	modified:   SRS_reward_function/manifest.xml 	deleted:    SRS_reward_function/src/Beearm.cpp 	deleted:    SRS_reward_function/src/Beehead.cpp 	deleted:    SRS_reward_function/src/Reward_function.cpp 	deleted:    SRS_reward_function/src/Reward_function.h 	deleted:    SRS_reward_function/src/Reward_function_bees.cpp 	deleted:    SRS_reward_function/src/Reward_function_bees.h 	modified:   SRS_reward_function/src/SRS_reward_function/srv/__init__.pyc 	modified:   SRS_reward_function/src/SRS_reward_function/srv/_rewardsrv.py 	modified:   SRS_reward_function/src/SRS_reward_function/srv/_rewardsrv.pyc 	modified:   SRS_reward_function/src/SRS_reward_function/srv/_servertypefake.pyc 	deleted:    SRS_reward_function/src/armrewardserver.cpp 	deleted:    SRS_reward_function/src/func_arm.h 	deleted:    SRS_reward_function/src/func_head.h 	modified:   SRS_reward_function/src/func_head_test.cpp 	deleted:    SRS_reward_function/src/func_sdh.h 	deleted:    SRS_reward_function/src/func_torso.h 	deleted:    SRS_reward_function/src/func_tray.h 	deleted:    SRS_reward_function/src/headrewardserver.cpp 	deleted:    SRS_reward_function/src/sdhrewardserver.cpp 	deleted:    SRS_reward_function/src/torsorewardserver.cpp 	deleted:    SRS_reward_function/src/trayrewardserver.cpp 	modified:   SRS_reward_function/srv/rewardsrv.srv 	modified:   srs_decision_making/src/robot_configuration.py 	modified:   srs_decision_making/src/srs_actions_server.py 	modified:   srs_decision_making/src/srs_configuration_statemachines.py 	modified:   srs_decision_making/src/test_client_get_milk.py 	modified:   srs_states/src/shared_state_information.py

--- a/SRS_reward_function/CMakeLists.txt
+++ b/SRS_reward_function/CMakeLists.txt
@@ -27,11 +27,6 @@ rosbuild_gensrv()
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_executable(Reward_function_bees src/Reward_function_bees.cpp)
-rosbuild_add_executable(armrewardserver src/armrewardserver.cpp)
-rosbuild_add_executable(headrewardserver src/headrewardserver.cpp)
-rosbuild_add_executable(trayrewardserver src/trayrewardserver.cpp)
-rosbuild_add_executable(sdhrewardserver src/sdhrewardserver.cpp)
-rosbuild_add_executable(torsorewardserver src/torsorewardserver.cpp)
+rosbuild_add_executable(rewardserver src/rewardserver.cpp)
 rosbuild_add_executable(func_head_test src/func_head_test.cpp)
-#rosbuild_add_executable(Reward_function src/Reward_function.cpp)
+
